Major refactors, added job and bulk
