# docs/swagger.json
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes Bulk API"
+                    "Bulk API"
                 ],
                 "summary": "Creates all the resources passed via request body.",
                 "parameters": [
@@ -45,7 +45,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Daemonsets"
                 ],
                 "summary": "Gets the list of the Daemonsets in the k8s cluster.",
                 "parameters": [
@@ -74,7 +74,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Deployments"
                 ],
                 "summary": "Gets the list of the deployments in the k8s cluster.",
                 "parameters": [
@@ -93,6 +93,97 @@
                 }
             }
         },
+        "/api/v1/job/list": {
+            "get": {
+                "description": "Gets the list of the job in the k8s cluster.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Job"
+                ],
+                "summary": "Gets the list of the job in the k8s cluster.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "job search by namespace",
+                        "name": "namespace",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sample result: \"{\\\"jobs\\\":[],\\\"namespace\\\":\\\"default\\\",\\\"number_of_jobs\\\":0,\\\"status\\\":200}"
+                    }
+                }
+            }
+        },
+        "/api/v1/job/template/create": {
+            "post": {
+                "description": "Creates the jobs from the job template, currently the method only supports job with one container.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Job"
+                ],
+                "summary": "Creates the jobs from the job template.",
+                "parameters": [
+                    {
+                        "description": "body_param",
+                        "name": "body_param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UnstructuredRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Sample result: \"{\\\"message\\\":\\\"job has been created successfully\\\",\\\"status\\\":201}"
+                    }
+                }
+            }
+        },
+        "/api/v1/job/yaml/create": {
+            "post": {
+                "description": "Creates the jobs from the request body.",
+                "consumes": [
+                    "application/yaml"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Job"
+                ],
+                "summary": "Creates the jobs from the request body.",
+                "parameters": [
+                    {
+                        "description": "body_param",
+                        "name": "body_param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Sample result: \"{\\\"message\\\":\\\"job has been created successfully\\\",\\\"status\\\":201}"
+                    }
+                }
+            }
+        },
         "/api/v1/namespace/list": {
             "get": {
                 "description": "Gets the list of the namespaces in the k8s cluster.",
@@ -103,7 +194,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Namespace"
                 ],
                 "summary": "Gets the list of the namespaces in the k8s cluster.",
                 "responses": {
@@ -123,7 +214,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Node"
                 ],
                 "summary": "Gets the list of the nodes in the k8s cluster.",
                 "responses": {
@@ -163,7 +254,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Pod"
                 ],
                 "summary": "Gets the list of the pods in the k8s cluster.",
                 "parameters": [
@@ -192,7 +283,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Pod"
                 ],
                 "summary": "Creates the pods from the pod template.",
                 "parameters": [
@@ -202,7 +293,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/form.UnstructuredRequest"
+                            "$ref": "#/definitions/model.UnstructuredRequest"
                         }
                     }
                 ],
@@ -223,7 +314,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Pod"
                 ],
                 "summary": "Creates the pods from the request body.",
                 "parameters": [
@@ -254,7 +345,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Service"
                 ],
                 "summary": "Gets the list of the services in the k8s cluster.",
                 "parameters": [
@@ -283,7 +374,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kubernetes"
+                    "Statefulsets"
                 ],
                 "summary": "Gets the list of the statefulsets in the k8s cluster.",
                 "parameters": [
@@ -304,12 +395,13 @@
         }
     },
     "definitions": {
-        "form.UnstructuredRequest": {
+        "model.UnstructuredRequest": {
             "type": "object",
             "required": [
                 "commandParams",
                 "namespace",
-                "templateName"
+                "templateName",
+                "testLabel"
             ],
             "properties": {
                 "commandParams": {
@@ -332,7 +424,12 @@
                 },
                 "templateName": {
                     "type": "string",
-                    "maxLength": 40,
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "testLabel": {
+                    "type": "string",
+                    "maxLength": 50,
                     "minLength": 2
                 }
             }
